[package]
name = "saver"
version = "0.12.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SAVER SNARK-friendly, Additively-homomorphic, and Verifiable Encryption and decryption with Rerandomization"

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-r1cs-std.workspace = true
ark-relations.workspace = true
ark-groth16.workspace = true
digest.workspace = true
rayon = { workspace = true, optional = true }
dock_crypto_utils = { path = "../utils", default-features = false }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"
rmp-serde = "1.0"
proof_system = { path = "../proof_system" }
bbs_plus = { path = "../bbs_plus" }

[features]
default = ["parallel"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-groth16/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
    "rayon",
    "ark-r1cs-std/parallel",
]
